@@ -74,7 +74,13 @@
 			Changed display of links on home page.  In particular, change &quot;Public Site
 			Lising&quot; to &quot;Public Sites&quot;.  Removed &quot;links&quot; header and removed header
 			formatting from help link.  Also added text to public site listing.
-		 (<i>Alex Chapin</i>)		
+		 (<i>Alex Chapin</i>)
+		<li/> New feature: <a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1036499&amp;group_id=82171&amp;atid=565237">
+        			#1036499</a> 
+			Added a config option to include registration link below login
+			fields when there has been no authentication.  Also added config option
+			to include a external authentication help text string.
+		 (<i>Alex Chapin</i>)	
 		<li/> New feature:  
 			Added a config option to include forgot your password link below login
 			fields when there has been no authentication.  This allows users to request
