@@ -12,9 +12,21 @@ print '<meta http-equiv="Content-Type" content="text/html; charset=utf-8">';
 include("includes.inc.php");
 //printpre ($_REQUEST);
 
+/******************************************************************************
+ * actions: 
+ * login -> auth
+ * register -> newuser, 
+ * reset -> send,
+ * change -> newpassword
+ ******************************************************************************/
+
 if ($_REQUEST[reset] == "reset") $reset = $_REQUEST[reset];
 //if ($_REQUEST[email]) $email = $_REQUEST[email];
 //if ($_REQUEST[uname]) $uname = $_REQUEST[uname];
+
+/******************************************************************************
+ * newpassword - changes password
+ ******************************************************************************/
 
 if ($_REQUEST[action] == "newpassword") {
 	$authtype = db_get_value("user","user_authtype","user_uname = '$_SESSION[auser]'");
@@ -59,16 +71,25 @@ if ($_REQUEST[action] == "newpassword") {
 		$message = "<div align=center>Your password has been changed<br><br></div>";
 		$message .= "<div align=center><input type=button value='Return' onClick='window.close()'></div>";
 	}
+
+/******************************************************************************
+ * send || newuser - generates a password and sends to existing or new user
+ ******************************************************************************/
 	
 } else if ($_REQUEST[action] == "send" || $_REQUEST[action] == "newuser") {
 	$name = $_REQUEST['uname'];
 	$email = $_REQUEST['email'];
-	if (!$_REQUEST['uname']) $message = "<div align=center>You must enter a Name.<br><br></div>";
-	if (!$_REQUEST['email'] || !ereg("@", $_REQUEST['email'])) {
-		 $message = "<div align=center>You must enter a valid email address.<br><br></div>";
-	}
 	
 	$error = FALSE;
+	if (!$_REQUEST['uname']) {
+		$message = "<div align=center>You must enter a Name.<br><br></div>";
+		$error = TRUE;
+	} else if (!$_REQUEST['email'] || !ereg("@", $_REQUEST['email'])) {
+		 $message = "<div align=center>You must enter a valid email address.<br><br></div>";
+		 $error = TRUE;
+	}
+	
+
 	foreach ($cfg[visitor_email_excludes] as $visitor_email_exclude) {
 		if ($exclude = ereg($visitor_email_exclude, $email)) {
 			if ($_REQUEST[action] == "send") {
@@ -90,7 +111,10 @@ if ($_REQUEST[action] == "newpassword") {
 		$message = "<div align=left>This user account is not authenticated by Segue and so you cannot reset this account's password here.<br></div>";
 	}
 	 	
-	// a matching user was found and email not excluded
+	/******************************************************************************
+	 * a matching user was found and email not excluded
+	 ******************************************************************************/
+	 
 	if ($id > 0 && $error != TRUE) {
 		
 		if ($_REQUEST[action] == "send") {
@@ -103,10 +127,20 @@ if ($_REQUEST[action] == "newpassword") {
 		} else {
 			$message = "<div align=left>Your email address is already in our database.";
 			$message .= " (<a href=passwd.php?$sid&action=reset&email=$email>Forgot your password?</a>).</div>";
-		}		
+		}	
+	
+	/******************************************************************************
+	 * reset password (send) no matching user found ...
+	 ******************************************************************************/
+	
 	} else if ($_REQUEST[action] == "send" && $error != TRUE) {
 		$message = "<div align=center>There is no visitor user account for this email address...<br></div>";
-		
+	
+	/******************************************************************************
+	 * register -> newuser: no matching user found therefore create new user
+	 * and authenticate
+	 ******************************************************************************/
+	
 	} else if ($_REQUEST[action] == "newuser" && $error != TRUE) {
 		$name = $email;
 		$obj = &new user();
@@ -148,6 +182,10 @@ if ($_REQUEST[action] == "newpassword") {
 
 	}
 
+/******************************************************************************
+ * log in -> auth
+ ******************************************************************************/
+
 } else if ($_REQUEST[action] == "auth") {
 	$name = $_REQUEST['uname'];
 	$pass = $_REQUEST['password'];
@@ -176,7 +214,7 @@ if ($_REQUEST[action] == "newpassword") {
 		$message = "<div align=left>Your login information was correct. Use the Return button below to complete authentication.<br><br></div>";
 		$message .= "<div align=center><input type=button value='Return' onClick='refreshParent()'></div>";
 	} else {
-		$message = "<div align=left>Your password/username was incorrect.";
+		$message = "<div align=left>Your password/username was incorrect.<br>";
 		//$message .= " (<a href=passwd.php?$sid&action=reset&email=$email>Forgot your password?</a>).</div>";
 	}
 
@@ -185,7 +223,19 @@ if ($_REQUEST[action] == "newpassword") {
 ?>
 <html>
 <head>
-<title>Password</title>
+<title>
+<?
+if ($_REQUEST[action] == "reset" || $reset) {
+	print "Reset Password";
+} else if ($_REQUEST[action] == "login" || $auth) {
+	print "Log In";
+} else if ($_REQUEST[action] == "register" || $newuser) {
+	print "Register";
+} else if ($_REQUEST[action] == "change" || $change) {
+	print "Change My Password";
+}
+?>
+</title>
 <? include("themes/common/logs_css.inc.php"); ?>
 <script lang='JavaScript'>
 
@@ -213,7 +263,7 @@ function refreshParent() {
 	} else if ($_REQUEST[action] == "login" || $auth) {
 		print "Log In";
 	} else if ($_REQUEST[action] == "register" || $newuser) {
-		print "Register";
+		print "Visitor Registratoin";
 	} else if ($_REQUEST[action] == "change" || $change) {
 		print "Change My Password";
 	}
@@ -221,63 +271,91 @@ function refreshParent() {
 </th></tr>
 
 <?
+/******************************************************************************
+ * Change Password UI
+ ******************************************************************************/
 
 if ($_REQUEST[action] == "change" || $change) {
-	print "<tr><td colspan=2 align=left> Chose a new password below. (not all users can change their passwords here)<br><br>";
-	print "<tr><td> User Name: </td>";
-	print "<td><input type=text name='uname' size=30 value='".$_SESSION['auser']."' readonly></td>"; 
-	print "</tr>";
-	print "<tr><td>Full Name: </td>";
-	print "<td><input type=text name='fname' size=30 value='".$_SESSION['afname']."' readonly></td>";
-	print "</tr>";
-	print "<tr><td>Email Address:</td>";
-	print"<td><input type=text name='email' size=30 value='".$_REQUEST['email']."' readonly></td> ";
-	print"<tr>";
-	print"<td>Old Password:</td>";
-	print"<td><input type=password name='oldpass' size=30 value='".$oldpass."'></td></tr>";
-	print"<tr>";
-	print"<td>New Password:</td>";
-	print"<td><input type=password name='newpass1' size=30 value='".$newpass1."'> <span style='color: #a00'>*</span></td>";
-	print"</tr>";
-	print"<tr>";
-	print"<td>Again:</td>";
-	print"<td><input type=password name='newpass2' size=30 value='".$newpass2."'>  <span style='color: #a00'>*</span></td>";
-	print"</tr>";
-	print"<tr>";
-	print"<td colspan=2><span style='color: #a00'>* Must be 8-200 characters long and not contain any of the following: \" '</span></td>";
-	print"</tr>";
-	print"<tr><td colspan=2 align=center><input type=submit value='Change password'><br><br>";
-	print"<input type=hidden name='action' value='newpassword'>";
-	print"<input type=hidden name='change' value='1'>";
-	print" <a href=passwd.php?$sid&action=reset&email=$email>Forgot your password?</a> | ";
-	print" <a href=passwd.php?$sid&action=login&email=$email>Log in.</a></td></tr>";
+	if (!isset($_SESSION[ltype])) {
+		print "<tr><td colspan=2 align=center> You must already be authenticated in order to change your password.<br>";
+		print" <a href=passwd.php?$sid&action=reset&email=$email>Forgot your password?</a>";
+		print "</td></tr>";
+	} else {	
+		print "<tr><td colspan=2 align=center> Chose a new password below.<br>";
+		print "<br><div align=left>(".$cfg[auth_help].")</div><br>";
+		print "<tr><td> User Name: </td>";
+		print "<td><input type=text name='uname' size=30 value='".$_SESSION['auser']."' readonly></td>"; 
+		print "</tr>";
+		print "<tr><td>Full Name: </td>";
+		print "<td><input type=text name='fname' size=30 value='".$_SESSION['afname']."' readonly></td>";
+		print "</tr>";
+		print "<tr><td>Email Address:</td>";
+		print"<td><input type=text name='email' size=30 value='".$_REQUEST['email']."' readonly></td> ";
+		print"<tr>";
+		print"<td>Old Password:</td>";
+		print"<td><input type=password name='oldpass' size=30 value='".$oldpass."'></td></tr>";
+		print"<tr>";
+		print"<td>New Password:</td>";
+		print"<td><input type=password name='newpass1' size=30 value='".$newpass1."'> <span style='color: #a00'>*</span></td>";
+		print"</tr>";
+		print"<tr>";
+		print"<td>Again:</td>";
+		print"<td><input type=password name='newpass2' size=30 value='".$newpass2."'>  <span style='color: #a00'>*</span></td>";
+		print"</tr>";
+		print"<tr>";
+		print"<td colspan=2><span style='color: #a00'>* Must be 8-200 characters long and not contain any of the following: \" '</span></td>";
+		print"</tr>";
+		print"<tr><td colspan=2 align=center><input type=submit value='Change password'><br><br>";
+		print"<input type=hidden name='action' value='newpassword'>";
+		print"<input type=hidden name='change' value='1'>";
+		print" <a href=passwd.php?$sid&action=reset&email=$email>Forgot your password?</a> | ";
+		print" <a href=passwd.php?$sid&action=login&email=$email>Log in.</a>";
+		print "</td></tr>";
+	}
+
+/******************************************************************************
+ * Log in UI
+ ******************************************************************************/
 
 } else if ($_REQUEST[action] == "login" || $auth) {
-	print "<tr><td colspan=2 align=center> Please enter your username and password. <br></td>";
-	print "<tr><td> User Name: </td>";
+	print "<tr><td colspan=2 align=center> Please enter your username and password. <br>";
+	print "<br><div align=left>(".$cfg[auth_help].")</div><br>";
+	print "</td><tr><td> User Name: </td>";
 	print "<td><input type=text name='uname' size=30 value=''></td>";
 	print "<tr><td>Password:</td>";
 	print"<td><input type=password name='password' size=30 value=''> </td>";
 	print"<tr><td colspan=2 align=center><input type=submit value='Log In'><br><br>";
 	print" <a href=passwd.php?$sid&action=reset&email=$email>Forgot your password?</a> | ";
-	print" <a href=passwd.php?$sid&action=change&email=$email>Change your password.</a></td></tr>";
+	print" <a href=passwd.php?$sid&action=change&email=$email>Change your password.</a>";
+	print "</td></tr>";
 	print"<input type=hidden name='action' value='auth'>";
 	print"<input type=hidden name='auth' value='1'>";
+
+/******************************************************************************
+ * Register UI
+ ******************************************************************************/
 
 } else if ($_REQUEST[action] == "register" || $newuser) {
 	print "<tr><td colspan=2 align=left> Please enter your name and your email address.";
 	print "  Once you have registered you will be able to post to this and all other $cfg[inst_name] public forums.";
-	print "  Your username will be your email address and a password will be emailed to you.<br><br></td>";
-	print "<tr><td> User Name: </td>";
+	print "  Your username will be your email address and a password will be emailed to you.<br><br>";
+	print "(".$cfg[auth_help].")<br><br>";
+	print "</td><tr><td> User Name: </td>";
 	print "<td><input type=text name='uname' size=30 value='".$_REQUEST['uname']."'></td>";
 	print "<tr><td>Email Address:</td>";
 	print"<td><input type=text name='email' size=30 value='".$_REQUEST['email']."'> </td>";
 	print"<tr><td colspan=2 align=center><input type=submit value='Register'></td></tr>";
 	print"<input type=hidden name='action' value='newuser'>";
 	print"<input type=hidden name='newuser' value='1'>";
+
+/******************************************************************************
+ * Reset Password UI
+ ******************************************************************************/
+
 } else if ($_REQUEST[action] == "reset" || $reset) {
-	print "<tr><td colspan=2 align=left> Please enter your email address and a password will be sent to you. (not all users can reset their passwords here)<br><br></td>";
-	print "<tr><td>Email Address:</td>";
+	print "<tr><td colspan=2 align=left> Please enter your email address and a new password will be sent to you.<br><br>";
+	print "(".$cfg[auth_help].")<br><br>";
+	print "</td><tr><td>Email Address:</td>";
 	print"<td><input type=text name='email' size=30 value='".$_REQUEST['email']."'></td></tr>";
 	print"<tr><td colspan=2 align=center><input type=submit name='submit' value='Send new password'><br><br>";
 	print"<input type=hidden name='action' value='send'>";
