@@ -32,7 +32,9 @@ v. 1.3.0 (the future)
 		
 	* Change: Added new template to config.inc.php. (Alex Chapin)		
 		
-	* Change: Changed display of links on home page. In particular, change &quot;Public Site Lising&quot; to &quot;Public Sites&quot;. Removed &quot;links&quot; header and removed header formatting from help link. Also added text to public site listing. (Alex Chapin)		
+	* Change: Changed display of links on home page. In particular, change &quot;Public Site Lising&quot; to &quot;Public Sites&quot;. Removed &quot;links&quot; header and removed header formatting from help link. Also added text to public site listing. (Alex Chapin)
+		
+	* New feature: #1036499 Added a config option to include registration link below login fields when there has been no authentication. Also added config option to include a external authentication help text string. (Alex Chapin)	
 		
 	* New feature: Added a config option to include forgot your password link below login fields when there has been no authentication. This allows users to request Segue to reset the passwords for their Segue user accounts (i.e. those accounts whose authentication type is &quot;db&quot;) (Alex Chapin)		
 		
